# spin-dream-fullstack

./: README.md  example.sh  spin
.github/workflows/: ci.yml
example/: .gitignore  .ocamlformat-ignore  Makefile  README.md  demo.opam  dune  dune-project
example/asset/: manifest.json
example/lib/demo/: dune
example/lib/demo_web/: config.ml  demo_web.ml  dune  router.ml
example/lib/demo_web/handlers/: page_handler.ml
example/lib/demo_web/templates/: dune  index_template.eml  layout_template.eml
example/script/: watch.sh
example/test/demo_web/: dune  page_handler_test.ml
template/: .dockerignore  .gitignore  .ocamlformat-ignore  Dockerfile  LICENSE  Makefile  README.md  dune  dune-project  package.json  tailwind.config.js  {{ project_slug }}.opam  {{ project_slug }}.opam.template
template/asset/: dune  helpers.js  manifest.json
template/config/: prod.ml  tailwind.config.js  test.ml
template/github/workflows/: ci.yml
template/lib/{{ project_snake }}/: dune
template/lib/{{ project_snake }}_app/: dune  {{ project_snake }}_app.ml
template/lib/{{ project_snake }}_web/: dune  router.ml  {{ project_snake }}_web.ml
template/lib/{{ project_snake }}_web/handlers/: fallback_handler.ml  page_handler.ml
template/lib/{{ project_snake }}_web/templates/: app_template.eml  dune  fallback_template.eml.ml  index_template.eml  layout_template.eml
template/script/: watch.sh
template/test/demo_web/: dune  page_handler_test.ml
