{% if include_tailwind == "true" %}
(rule
 (target main.css)
 (deps
  (:data ../tailwind.config.js)
  (source_tree ../node_modules)
  (source_tree ../lib/{{ project_snake }}_web/templates)
  (env_var NODE_ENV))
 (action
  (chdir
   %{workspace_root}
   ; We use node_modules/tailwindcss/lib/cli.js instead of `npx tailwindcss`
   ; because dune won't include node_modules/.bin in the build, no matter
   ; what I do.
   (run node node_modules/tailwindcss/lib/cli.js build -c
    tailwind.config.js -o %{target}))))
{% endif %}

(rule
 (target app.js)
 (deps
  (:data ../bin/app.bc.js))
 (action
  (run cp ../bin/app.bc.js app.js)))
