(library
 (name {{ project_snake }}_web)
 (libraries dream))

(rule
 (targets asset.ml)
 (deps
  ../../asset/main.css
  ../../asset/app.js
  (source_tree ../../asset))
 (action
  (with-stdout-to
   %{null}
   (run %{bin:ocaml-crunch} -e ico -e js -e svg -e txt -e css -m plain
     ../../asset -o %{targets}))))

(rule
 (targets config.ml)
 (deps ../../config/dev.ml)
 (enabled_if
  (= %{profile} dev))
 (action
  (copy %{deps} %{targets})))

(rule
 (targets config.ml)
 (deps ../../config/test.ml)
 (enabled_if
  (= %{profile} test))
 (action
  (copy %{deps} %{targets})))

(rule
 (targets config.ml)
 (deps ../../config/prod.ml)
 (enabled_if
  (= %{profile} release))
 (action
  (copy %{deps} %{targets})))

(include_subdirs unqualified)
