(library
 (name {{ project_snake }}_web)
 (libraries dream dream-cli dream-livereload))

(rule
 (targets asset.ml)
 (deps
  ../../asset/main.css
  ../../asset/app.js
  (source_tree ../../asset))
 (action
  (with-stdout-to
   %{null}
   (run %{bin:ocaml-crunch} -e ico -e js -e svg -e txt -e css -m plain
     ../../asset -o %{targets}))))

(include_subdirs unqualified)
