(rule
 (targets layout_template.ml)
 (deps layout_template.eml)
 (action
  (run %{bin:dream_eml} %{deps} --workspace %{workspace_root})))

(rule
 (targets index_template.ml)
 (deps index_template.eml)
 (action
  (run %{bin:dream_eml} %{deps} --workspace %{workspace_root})))

{% if include_embedded_js == "true" %}
(rule
 (targets app_template.ml)
 (deps app_template.eml)
 (action
  (run %{bin:dream_eml} %{deps} --workspace %{workspace_root})))
{% endif %}
